--- a/.github/workflows/python-checker.yaml
+++ b/.github/workflows/python-checker.yaml
@@ -1,15 +1,19 @@
 name: Python Checker
 
-on: [push]
-  jobs:
+on: push
+
+env:
+  PYTHON_VERSION: 3.11
+
+jobs:
     build:
       runs-on: ubuntu-latest
       steps:
       - uses: actions/checkout@v3
-      - name: Set up Python 3.11
+      - name: Set up Python $PYTHON_VERSION
         uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
+          python-version: '$PYTHON_VERSION'
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
