--- a/.github/workflows/python-checker.yaml
+++ b/.github/workflows/python-checker.yaml
@@ -10,10 +10,10 @@ jobs:
       runs-on: ubuntu-latest
       steps:
       - uses: actions/checkout@v3
-      - name: Set up Python $PYTHON_VERSION
+      - name: Set up Python ${{ env.PYTHON_VERSION }}
         uses: actions/setup-python@v4
         with:
-          python-version: '$PYTHON_VERSION'
+          python-version: '${{ env.PYTHON_VERSION }}'
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
