Update service account

--- a/.github/workflows/gcloud.yaml
+++ b/.github/workflows/gcloud.yaml
@@ -33,8 +33,8 @@ jobs:
       id: 'auth'
       uses: 'google-github-actions/auth@v1'
       with:
-        workload_identity_provider: "projects/417901482483/locations/global/workloadIdentityPools/my-pool/providers/my-provider"
-        service_account: 'my-service-account@signal-bot-368420.iam.gserviceaccount.com'
+        workload_identity_provider: "projects/417901482483/locations/global/workloadIdentityPools/signal-bot-pool/providers/signal-bot-provider"
+        service_account: '417901482483-compute@developer.gserviceaccount.com'
 
     - name: 'Set up Cloud SDK'
       uses: 'google-github-actions/setup-gcloud@v1'
@@ -63,5 +63,5 @@ jobs:
     - name: Deploy
       run: |-
         gcloud compute instances update-container "signal-bot" \
-          --zone "$GCE_INSTANCE_ZONE" \
+          --zone "${{ env.GCE_INSTANCE_ZONE }}" \
           --container-image "${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}"
