Add skip on error for pytest pylint

--- a/.github/workflows/python-checker.yaml
+++ b/.github/workflows/python-checker.yaml
@@ -22,6 +22,8 @@ jobs:
       - name: Analysing code with pylint
         run: |
           pylint $(git ls-files '*.py')
+        continue-on-error: true
       - name: Run test codes with pytest
         run: |
           pytest $(git ls-files 'test/*.py')
+        continue-on-error: true
