--- a/.github/workflows/gcloud.yaml
+++ b/.github/workflows/gcloud.yaml
@@ -8,7 +8,7 @@
 # You can also reference a tag or branch, but the action may change without warning.
 
 name: Deploy GCP
-on: [workflow_dispatch]
+on: [workflow_dispatch, push]
 
 env:
   REGISTRY: ghcr.io
