--- a/.github/workflows/gcloud.yaml
+++ b/.github/workflows/gcloud.yaml
@@ -64,4 +64,4 @@ jobs:
       run: |-
         gcloud compute instances update-container "signal-bot" \
           --zone "${{ env.GCE_INSTANCE_ZONE }}" \
-          --container-image "${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}"
+          --container-image "${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.meta.outputs.tags }}"
