--- a/.github/workflows/gcloud.yaml
+++ b/.github/workflows/gcloud.yaml
@@ -8,7 +8,10 @@
 # You can also reference a tag or branch, but the action may change without warning.
 
 name: Deploy GCP
-on: [workflow_dispatch, push]
+on:
+  push:
+    branch:
+      - main
 
 env:
   REGISTRY: romfib
