Feat/improve cicd (#2)
* Init fastapi template

* Test workflow dispatch

* Add tag to push image

* Push to docker hub

* Add login in dockerhub

* change port and fix images updated

* only deploy on master

--- a/.github/workflows/gcloud.yaml
+++ b/.github/workflows/gcloud.yaml
@@ -7,15 +7,15 @@
 # To get a newer version, you will need to update the SHA.
 # You can also reference a tag or branch, but the action may change without warning.
 
+name: Deploy GCP
 on:
   push:
-    branches:
+    branch:
       - main
-      - 'release/**'
 
 env:
-  REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
+  REGISTRY: romfib
+  IMAGE_NAME: signal-bot
   GCE_INSTANCE: signal-bot
   GCE_INSTANCE_ZONE: us-central1-a
 
@@ -45,15 +45,14 @@ jobs:
     - name: Log in to the Container registry
       uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
       with:
-        registry: ${{ env.REGISTRY }}
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
+        username: ${{ secrets.DOCKER_HUB_USER }}
+        password: ${{ secrets.DOCKER_HUB_PASSWORD }}
 
     - name: Extract metadata (tags, labels) for Docker
       id: meta
       uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
       with:
-        images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+        images: ${{ secrets.DOCKER_HUB_USER }}/${{ env.IMAGE_NAME }}
 
     - name: Build and push Docker image
       uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
@@ -67,4 +66,4 @@ jobs:
       run: |-
         gcloud compute instances update-container "signal-bot" \
           --zone "${{ env.GCE_INSTANCE_ZONE }}" \
-          --container-image "${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}"
+          --container-image "${{ steps.meta.outputs.tags }}"
