--- a/.github/workflows/gcloud.yaml
+++ b/.github/workflows/gcloud.yaml
@@ -17,7 +17,8 @@ env:
   REGISTRY: romfib
   IMAGE_NAME: signal-bot
   GCE_INSTANCE: signal-bot
-  GCE_INSTANCE_ZONE: us-central1-a
+  GCE_INSTANCE_ZONE: us-west1-a
+
 
 jobs:
   gcloud_cicd:
