Feat/basic api (#3)
* Oauth2 with google enabled

* Add clientid and secret in settings

* Update zone and state check

* Modify google flow to be settled by client config content

* Fix redirect_callback and config files path

* fix zone for action

* add romain mail to whitelist

* Move local_db out of backend, change access whitelist

Co-authored-by: rfibigr <rfibigr@student.42.fr>

--- a/.github/workflows/gcloud.yaml
+++ b/.github/workflows/gcloud.yaml
@@ -17,7 +17,8 @@ env:
   REGISTRY: romfib
   IMAGE_NAME: signal-bot
   GCE_INSTANCE: signal-bot
-  GCE_INSTANCE_ZONE: us-central1-a
+  GCE_INSTANCE_ZONE: us-west1-b
+
 
 jobs:
   gcloud_cicd:
