--- a/.github/workflows/python-checker.yaml
+++ b/.github/workflows/python-checker.yaml
@@ -18,11 +18,11 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install -r test/requirements.txt
+          pip install -r requirements-test.txt
       - name: Analysing code with pylint
         run: |
           pylint $(git ls-files '*.py')
         continue-on-error: true
       - name: Run test codes with pytest
         run: |
-          pytest $(git ls-files './signal_bot/backend')
+          python -m pytest .
