--- a/.pylintrc
+++ b/.pylintrc
@@ -1,6 +1,10 @@
 [MASTER]
 init-hook='import sys; sys.path.append("/home/rfibigr/project/bot-signal"); sys.path.append("/home/suslord/Documents/bot-signal")'
+extension-pkg-whitelist=pydantic
 disable=
-    C0114, # missing-module-docstring
+	C0114, # missing-module-docstring
 	C0115, # missing-class-docstring
-	C0116 # missing-function-docstring
+	C0116, # missing-function-docstring
+
+[FORMAT]
+max-line-length=88
