--- a/.github/workflows/python-checker.yaml
+++ b/.github/workflows/python-checker.yaml
@@ -21,8 +21,7 @@ jobs:
           pip install -r requirements-test.txt
       - name: Analysing code with pylint
         run: |
-          pylint $(git ls-files '*.py')
-        continue-on-error: true
+          PYTHONPATH=. python -m pylint --fail-under=9.0 --recursive=y $(git ls-files '*.py')
       - name: Run test codes with pytest
         run: |
           python -m pytest .
