--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,7 +12,7 @@
 		"source=${localWorkspaceFolder}/.data,target=/data,type=bind,consistency=cached"
 	],
 
-	// Configure tool-specific properties.
+	// Configure tool-specific properties
 	"customizations": {
 		// Configure properties specific to VS Code.
 		"vscode": {
@@ -47,5 +47,4 @@
 	// "postCreateCommand": "pip3 install --user -r requirements.txt",
 
 	// Comment out to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
-	"remoteUser": "root"
 }
