--- a/ruff.toml
+++ b/ruff.toml
@@ -13,3 +13,4 @@ select = ["E", "F"]
 [per-file-ignores]
 "__init__.py" = ["F401"]
 "bot.py" = ["E402", "F401"]
+"test_commands.py" = ["E402", "F401"]
