--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -18,35 +18,42 @@
 		"vscode": {
 			// Set *default* container specific settings.json values on container create.
 			"settings": { 
+				"terminal.integrated.defaultProfile.linux": "bash",
 				"python.defaultInterpreterPath": "/usr/local/bin/python",
 				"python.linting.enabled": true,
 				"python.linting.pylintEnabled": true,
-				"python.formatting.autopep8Path": "/usr/local/py-utils/bin/autopep8",
-				"python.formatting.blackPath": "/usr/local/py-utils/bin/black",
-				"python.formatting.yapfPath": "/usr/local/py-utils/bin/yapf",
-				"python.linting.banditPath": "/usr/local/py-utils/bin/bandit",
-				"python.linting.flake8Path": "/usr/local/py-utils/bin/flake8",
-				"python.linting.mypyPath": "/usr/local/py-utils/bin/mypy",
-				"python.linting.pycodestylePath": "/usr/local/py-utils/bin/pycodestyle",
-				"python.linting.pydocstylePath": "/usr/local/py-utils/bin/pydocstyle",
-				"python.linting.pylintPath": "/usr/local/py-utils/bin/pylint"
+				"python.formatting.autopep8Path": "/app/.local/bin/autopep8",
+				"python.formatting.blackPath": "/app/.local/bin/black",
+				"python.formatting.yapfPath": "/app/.local/bin/yapf",
+				"python.linting.banditPath": "/app/.local/bin/bandit",
+				"python.linting.flake8Path": "/app/.local/bin/flake8",
+				"python.linting.mypyPath": "/app/.local/bin/mypy",
+				"python.linting.pycodestylePath": "/app/.local/bin/pycodestyle",
+				"python.linting.pydocstylePath": "/app/.local/bin/pydocstyle",
+				"python.linting.pylintPath": "/app/.local/bin/pylint"
 			},
 			
 			// Add the IDs of extensions you want installed when the container is created.
 			"extensions": [
 				"ms-python.python",
 				"ms-python.vscode-pylance",
-				"GitHub.copilot"
+				"GitHub.copilot",
+				"charliermarsh.ruff"
 			]
 		}
 	},
-	"remoteUser": "signal-bot"
+	"remoteUser": "signal-bot",
+	"remoteEnv": {
+		"PATH": "${containerEnv:PATH}:/app/.local/bin",
+		"PYTHONDONTWRITEBYTECODE": "1"
+
+	},
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	// "forwardPorts": [],
+	// "forwardPorts": []
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	// "postCreateCommand": "pip3 install --user -r requirements.txt",
+	"postCreateCommand": "pip3 install --user black autopep8 yapf bandit flake8 mypy pycodestyle pydocstyle pylint pre-commit"
 
 	// Comment out to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
 }
