--- a/ruff.toml
+++ b/ruff.toml
@@ -1,7 +1,7 @@
 line-length = 88
 
 # Enable Pyflakes and pycodestyle rules.
-select = ["E", "F"]
+select = ["E", "F", "Q"]
 
 # Never enforce `E501` (line length violations).
 # ignore = ["E501"]
