Feat/Add intermediate schema (#38)
* Removed pylint comments

* Added an intermediate schema for data incoming from formater
Added reaction commands
Commands now take the data schema in arg
Refacto chatter.send_message
Added mention lookup in send_message

* Mainly fixing the integration of data_formated
Added check for recipient type in formater
Fix cycle dependance of core/config

* Modif unit testing of command
Started testing for formater

* Added test integration of commands

* resolve merge conflict

* Fix merge changes directory

* Fix ruff

* JsonRpc Formater unit testing

Co-authored-by: rfibigr <rfibigr@student.42.fr>

--- a/ruff.toml
+++ b/ruff.toml
@@ -1,7 +1,7 @@
 line-length = 88
 
 # Enable Pyflakes and pycodestyle rules.
-select = ["E", "F"]
+select = ["E", "F", "Q"]
 
 # Never enforce `E501` (line length violations).
 # ignore = ["E501"]
@@ -13,3 +13,4 @@ select = ["E", "F"]
 [per-file-ignores]
 "__init__.py" = ["F401"]
 "bot.py" = ["E402", "F401"]
+"test_commands.py" = ["E402", "F401"]
